maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: not enough arguments for method keepHandOnSideWall: (sommeAngle: Int)Unit.
Unspecified value parameter sommeAngle.
	{keepHandOnSideWall()}
                           ^Escaper:26: error: value += is not a member of Int
		{sommeAngle += 1
                            ^Escaper:33: error: value -= is not a member of Int
						{sommeAngle -= 1
                                                            ^